# memedb_core

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  fuzz.sh
.github/workflows/: ci.yaml  fuzz.yaml
benches/: gif.rs  png.rs  riff.rs
examples/: reader.rs  reader_async.rs  writer.rs
fuzz/: Cargo.toml  gif_seeds  jpeg_seeds  png_seeds  riff_seeds  seed_inputs
fuzz/fuzz_targets/: identity.rs  read_never_panics.rs  write_never_panics.rs
src/: error.rs  formats.rs  gif.rs  helpers.rs  jpg.rs  lib.rs  png.rs  reader.rs  reader_tests.rs  tags.rs  template.xml  utils.rs  xml.rs
src/formats/: gif.rs  isobmff.rs  jpeg.rs  mod.rs  png.rs  riff.rs
src/handlers/: mod.rs  png.rs
tests/: integration.rs  integration_tests.rs  invalid  jpg.xml  jpg2.xml  large.xcf  minimal.xcf  tests.rs  when_you.xcf
