[package]
name = "memedb_core"
version = "1.0.2"
authors = ["SrKomodo", "PeronTheDuck"]
description = "Rust library for reading and writing tags to media files, specifically for the use of categorizing memes."
# homepage = "..."
repository = "https://gitlab.com/memedb/memedb_core"
readme = "README.md"
keywords = ["meme", "db", "tags"]
categories = ["parser-implementations", "encoding", "data-structures"]
license = "GPL-3.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "memedb/memedb_core" }

[features]
default = ["gif", "png", "riff"]
gif = []
png = ["crc"]
riff = []

[dependencies]
crc = { version = "2.1.0", optional = true }
thiserror = "1.0.30"

[dev-dependencies]
criterion = "0.3.5"
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = "1.0.0"

[[bench]]
name = "png"
harness = false

[[bench]]
name = "gif"
harness = false

[[bench]]
name = "riff"
harness = false
