[package]
name = "memedb_core"
version = "1.0.2"
authors = ["SrKomodo", "PeronTheDuck"]
description = "Rust library for reading and writing tags to media files, specifically for the use of categorizing memes."
# homepage = "..."
repository = "https://gitlab.com/memedb/memedb_core"
readme = "README.md"
keywords = ["meme", "db", "tags"]
categories = ["parser-implementations", "encoding", "data-structures"]
license = "GPL-3.0-or-later"
edition = "2021"

[badges]
gitlab = { repository = "memedb/memedb_core" }

[features]
default = ["gif", "isobmff", "jpeg", "png", "riff"]
gif = []
isobmff = []
jpeg = ["memchr"]
png = ["crc"]
riff = []

[dependencies]
memchr = { version = "2.5.0", optional = true }
crc = { version = "3.0.0", optional = true }
thiserror = "1.0.30"
futures = "0.3.28"

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = "1.0.0"
smol = "1.3.0"
