[package]
name = "memedb_core"
version = "2.0.0"
authors = ["Komodo", "BlueTheDuck"]
description = "Rust library for reading and writing tags to different media formats"
repository = "https://github.com/arguablykomodo/memedb_core"
readme = "README.md"
keywords = ["meme", "db", "tags"]
categories = ["parser-implementations", "encoding", "data-structures"]
license = "GPL-3.0-or-later"
edition = "2021"

[features]
default = ["gif", "isobmff", "jpeg", "png", "riff"]
gif = []
isobmff = []
jpeg = ["memchr"]
png = ["crc"]
riff = []

[dependencies]
memchr = { version = "2.5.0", optional = true }
crc = { version = "3.0.0", optional = true }

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = "1.0.0"
